# microdantic

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: black.yaml  bump_version.yaml  tests.yaml
microdantic/: __init__.py  base_model.py  hashes.py  main.py  microdantic.py
