[tool.poetry]
name = "microdantic"
version = "0.1.0"
description = ""
authors = ["christianbonnell <christian.bonnell@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0 <3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
