[tool.poetry]
name = "microdantic"
version = "0.3.1"
description = ""
authors = ["christianbonnell <christian.bonnell@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tests = "microdantic.main:run_tests"

[tool.commitizen]
version_provider = "poetry"
version_scheme = "pep440"
version_files = ["microdantic/microdantic.py"]
